Clear down .deb files.

--- a/ssh-tunnel/Dockerfile
+++ b/ssh-tunnel/Dockerfile
@@ -4,6 +4,7 @@ MAINTAINER Andrew Heald <andrew@heald.uk>
 
 RUN apt-get -qq update
 RUN apt-get -qq -y install autossh
+RUN apt-get clean
 
 RUN useradd -m -s /bin/bash ssh-tunnel
 
