Restructure to allow better port exposure.

--- a/ssh-tunnel-ldap/Dockerfile
+++ b/ssh-tunnel-ldap/Dockerfile
@@ -2,6 +2,6 @@ FROM andrewheald/ssh-tunnel
 
 MAINTAINER Andrew Heald <andrew@heald.uk>
 
-COPY ssh-tunnel.sh /opt/ssh-tunnel.sh
+COPY entrypoint.sh /sbin/entrypoint.sh
 
 EXPOSE 389
