Simplify with better environment variable setup.

--- a/ldap/Dockerfile
+++ b/ldap/Dockerfile
@@ -3,5 +3,4 @@ FROM sappho/ssh-tunnel
 MAINTAINER Andrew Heald <andrew@heald.uk>
 
 EXPOSE 389
-
-COPY proxy.sh /opt/proxy.sh
+ENV PROXY -L 0.0.0.0:389:localhost:389
