--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -9,5 +9,5 @@ RUN apt-get clean
 RUN mkdir /root/.ssh
 VOLUME /root/.ssh
 
-COPY entrypoint.sh /opt/entrypoint.sh
+ADD entrypoint.sh /opt/entrypoint.sh
 ENTRYPOINT ["/opt/entrypoint.sh"]
